--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "ngx-cookie-service": "^10.1.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
